# soggy

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
soggy/: cli.py  markdown.py  minify.py  templates.py  vault.py
soggy/templates/: base.html  index.html  page.html
static/: style.css
tests/: conftest.py  test_cli_e2e.py  test_markdown.py  test_vault.py
